--- a/ETL_Mini_Project_BQuintero_LNovo.ipynb
+++ b/ETL_Mini_Project_BQuintero_LNovo.ipynb
@@ -1290,7 +1290,9 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df = campaign_df.rename(columns={'blurb': 'description', 'launched_at': 'launched_date', 'deadline': 'end_date'})\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -1479,7 +1481,9 @@
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df['goal'] = campaign_df['goal'].astype(float)\n",
+    "campaign_df['pledged'] = campaign_df['pledged'].astype(float)"
    ]
   },
   {
@@ -1516,7 +1520,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
@@ -1706,7 +1711,12 @@
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "from datetime import datetime as dt\n",
+    "\n",
+    "campaign_df[\"launched_date\"] = pd.to_datetime(campaign_df[\"launched_date\"], unit='s').dt.strftime('%Y-%m-%d') \n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"], unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -2054,6 +2064,8 @@
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
     "\n",
+    "campaign_cat_df=pd.merge(campaign_df , category_df , on='category')\n",
+    "campaign_merged_df=pd.merge(campaign_cat_df , subcategory_df , on='subcategory')\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
@@ -2226,7 +2238,8 @@
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_cleaned=campaign_merged_df[['cf_id', 'contact_id','company_name', 'description', 'goal', 'pledged','outcome','backers_count', 'country', 'currency', 'launched_date','end_date', 'category_id','subcategory_id' ]]"
    ]
   },
   {
@@ -2359,7 +2372,11 @@
     "# Iterate through the contact_info_df and convert each row to a dictionary.\n",
     "import json\n",
     "dict_values = []\n",
-    "\n",
+    "for i, row in contact_info_df.iterrows():\n",
+    "    data = row[0]\n",
+    "    converted_data = json.loads(data)\n",
+    "    row_values =[v for k, v in converted_data.items()]\n",
+    "    dict_values.append(row_values)\n",
     "\n",
     "# Print out the list of values for each row.\n",
     "print(dict_values)"
@@ -2447,7 +2464,10 @@
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "columns=['contact_id', 'name', 'email']\n",
+    "contact_df=pd.DataFrame(dict_values , columns=columns)\n",
+    "contact_df.head()"
    ]
   },
   {
@@ -2473,7 +2493,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_df.info()"
    ]
   },
   {
@@ -2604,10 +2625,10 @@
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
-    "\n",
+    "contact_df[['first_name' , 'last_name']]=contact_df['name'].str.split(' ' , expand=True)\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "contact_df.drop(columns=['name'], inplace=True)\n",
+    "contact_df.head()"
    ]
   },
   {
@@ -2737,7 +2758,9 @@
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contacts_df_reorder=contact_df[['contact_id' , 'first_name' , 'last_name' , 'email']]\n",
+    "contacts_df_reorder.head()"
    ]
   },
   {
@@ -2764,7 +2787,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contacts_df_reorder.info()"
    ]
   },
   {
@@ -2774,7 +2798,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contacts_df_reorder.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   },
   {
